--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.1.3",
+    "axios": "^1.6.7",
     "vue": "^3.4.15",
     "vue-router": "^4.3.0"
   },
